--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfront",
+  "name": "envy-commerce",
   "version": "0.1.0",
   "private": true,
   "license": "GNU General Public License v3 (GPL-3)",
