Adding search and filtering of products

--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ NEXT_PUBLIC_LOCALES_LANGUAGE="en"
 NEXT_PUBLIC_LOCALES="sv-SE"
 NEXT_PUBLIC_CURRENCY="SEK"
 
+# Search filter by product keys
+NEXT_PUBLIC_FILTER_KEYS="name,description"
+
 # This markdown text is a short information to the customer that appears on the product detail page above the "Add to cart" button
 NEXT_PUBLIC_GENERAL_LICENSE="You can read more about our conditions and shipping deals in our [customer service page](/customer-service/)."
 # NEXT_PUBLIC_PRODUCT_DESCRIPTION_TITLE="Produkt Beskrivning"
