--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "jest": "27.0.4",
     "lint-staged": "^10.5.4",
     "next-build-id": "^3.0.0",
     "pinst": "^2.1.6",
