--- a/.env
+++ b/.env
@@ -18,8 +18,11 @@ NEXT_PUBLIC_LOCALES_LANGUAGE="en"
 NEXT_PUBLIC_LOCALES="sv-SE"
 NEXT_PUBLIC_CURRENCY="SEK"
 
-# Search filter by product keys
-NEXT_PUBLIC_FILTER_KEYS="name,description"
+# Search product filters keys
+# All published products will be auto generated and indexed on the following urls
+# <baseUrl>/products.json
+# <base>/preCompiledSearchIndex.json
+NEXT_PUBLIC_FILTER_KEYS="name, description, keywords, collection"
 
 # This markdown text is a short information to the customer that appears on the product detail page above the "Add to cart" button
 NEXT_PUBLIC_GENERAL_LICENSE="You can read more about our conditions and shipping deals in our [customer service page](/customer-service/)."
