--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 #
 # Other variables can be used as secrets or "hidden" for API calls or similar.
 
+# Set the base url for your website
+# Used for generating sitemap.xml
+# BASE_URL="http://localhost"
+
 NEXT_PUBLIC_CORPORATE_NAME="Envy store"
 NEXT_PUBLIC_CORPORATE_TITLE="Envy eCommerce"
 NEXT_PUBLIC_CORPORATE_DESCRIPTION="EnvyMe - amazing eCommerce meta description"
