--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
     "marked": "^2.0.3",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "remark-gfm": "^1.0.0",
     "slugify": "^1.5.1"
@@ -48,6 +48,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.6",
