--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "export": "yarn build && next export -o dist",
     "build-prod": "yarn clean && yarn build && yarn export",
     "clean": "rm -rf ./.next && rm -rf ./dist && rm -rf ./.coverage && rm -rf ./.husky && rm ./public/preCompiledSearchIndex.json && rm ./public/products.json",
-    "lint": "yarn run eslint --ext .tsx --ext .ts src/ --fix && npx prettier -c --write ./",
+    "lint": "yarn next lint",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
