--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "fuse.js": "^6.4.6",
     "gray-matter": "^4.0.3",
     "marked": "^2.0.3",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "rehype-katex": "^5.0.0",
     "rehype-mathjax": "^3.1.0",
